--- a/frontend/src/locales/hi.json
+++ b/frontend/src/locales/hi.json
@@ -43,6 +43,31 @@
         "placeholder": "अपना प्रश्न टाइप करें...",
         "startPrompt": "सामग्री के बारे में पूछना शुरू करें!",
         "user": "आप",
-        "ai": "एआई"
+        "ai": "एआई",
+        "thinking": "सोच रहा हूँ...",
+        "waitingPhoto": "फोटो का इंतजार...",
+        "errorConnection": "क्षमा करें, मुझे सर्वर से कनेक्ट करने में परेशानी हो रही है।",
+        "errorAnalysis": "क्षमा करें, छवि का विश्लेषण करने में त्रुटि आई।",
+        "uploadScan": "छवि अपलोड या स्कैन करें",
+        "tapToScan": "स्कैन करने के लिए सर्कल पर टैप करें",
+        "back": "वापस नई चैट पर"
+    },
+    "history": {
+        "title": "चैट इतिहास",
+        "delete": "हटाएं",
+        "searchPlaceholder": "चैट खोजें...",
+        "emptyState": "अभी तक कोई चैट सहेजी नहीं गई।",
+        "noResults": "आपकी खोज से मेल खाती कोई चैट नहीं मिली।",
+        "startNew": "नई चैट शुरू करें",
+        "previous": "पिछला",
+        "next": "अगला",
+        "pageInfo": "पृष्ठ {{current}} / {{total}}",
+        "loading": "इतिहास लोड हो रहा है...",
+        "chatSession": "चैट सत्र"
+    },
+    "recent": {
+        "header": "हाल की चैट",
+        "viewAll": "सभी देखें",
+        "empty": "कोई हालिया बातचीत नहीं मिली"
     }
 }
