--- a/frontend/src/locales/hi.json
+++ b/frontend/src/locales/hi.json
@@ -50,7 +50,9 @@
         "errorAnalysis": "क्षमा करें, छवि का विश्लेषण करने में त्रुटि आई।",
         "uploadScan": "छवि अपलोड या स्कैन करें",
         "tapToScan": "स्कैन करने के लिए सर्कल पर टैप करें",
-        "back": "वापस नई चैट पर"
+        "back": "वापस नई चैट पर",
+        "loginRequired": "चैट शुरू करने के लिए कृपया लॉगिन करें।",
+        "loginToStart": "शुरू करने के लिए लॉगिन करें"
     },
     "history": {
         "title": "चैट इतिहास",
